--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "css-loader": "4.3.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "echarts": "^5.1.1",
+    "echarts-for-react": "^3.0.1",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -65,7 +67,6 @@
     "react-cookies": "^0.1.1",
     "react-dev-utils": "^11.0.0",
     "react-dom": "^17.0.1",
-    "react-map": "^0.0.2",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "resolve": "1.18.1",
